* Replace signif with round, signifDigits with digits. Update all    R files, templates and examples.
git-svn-id: file:///home/manu/work/irace/svn/trunk@516 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -83,7 +83,7 @@ TODO General:
  * Do not add extra parenthesis around simple expressions. Example:
       if ( (!file.exists(installDir)) ) has too many parenthesis.
 
- * It could be nice to be able to set a different nb of significant
+ * It could be nice to be able to set a different nb of rounding
    digits for each real parameters This number thus would be given in
    the parameters.txt file.  It should require very few
    modifications, only in the sampling (generation uniform and normal)
