* README: Fix syntax.
git-svn-id: file:///home/manu/work/irace/svn/trunk@557 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/README
+++ b/README
@@ -29,7 +29,7 @@ Usage
    
    mkdir ~/Rlibs
    R CMD INSTALL -I ~/Rlibs irace.tar.gz
-   export R_LIBS=~/Rlibs:$(R_LIBS)
+   export R_LIBS=~/Rlibs:${R_LIBS}
 
 2. Create a directory for storing the configuration of the tuning, for
    example "~/tuning/".  Copy the files in the
