* TODO: New item.
git-svn-id: file:///home/manu/work/irace/svn/trunk@567 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@ TODO R package:
  * Read about vignette, what we need to do to convert/use the IRIDIA
    TR as the vignette.
 
+ * Move the README information to the TR to avoid duplication.
+
 TODO General:
 
  * irace.Rdata should keep a list with the all the eliteCandidates after each
