* README: Adjust minimum version.
git-svn-id: file:///home/manu/work/irace/svn/trunk@568 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/README
+++ b/README
@@ -94,7 +94,7 @@ Requisites
 -------------
 
  * R (http://www.r-project.org/).
-   Versions that work: 2.10
+   Versions that work: >= 2.9.2
    Versions that do not work: 2.4 and earlier.
 
  * The wrappers irace and parallel-irace require GNU Bash.
