* README: Fix parameters when installing.
git-svn-id: file:///home/manu/work/irace/svn/trunk@580 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/README
+++ b/README
@@ -28,7 +28,7 @@ Usage
    (in GNU/Linux):
    
    mkdir ~/Rlibs
-   R CMD INSTALL -I ~/Rlibs irace.tar.gz
+   R CMD INSTALL --library=~/Rlibs irace.tar.gz
    export R_LIBS=~/Rlibs:${R_LIBS}
 
 2. Create a directory for storing the configuration of the tuning, for
