* R/utils.R: Handle also trailing backslash.  * NEWS: Update.
git-svn-id: file:///home/manu/work/irace/svn/trunk@599 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
 1.01
+
+ * Fix bug caused by file.exists (and possibly other functions)
+   not handling directory names with a trailing backslash or slash on
+   Windows.
  
  * Fix bug using per-instance parameters (Leslie Perez).
 
