* README: Mention more explicitly how to find IRACE_HOME.
git-svn-id: file:///home/manu/work/irace/svn/trunk@603 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/README
+++ b/README
@@ -85,7 +85,15 @@ Usage
    
 2. Copy the template and example files to the tuning directory
 
-        $ cp $IRACE_HOMDE/templates/*.tmpl .
+        $ cp $IRACE_HOME/templates/*.tmpl .
+   
+   where `$IRACE_HOME` is the path to the installation directory of
+   `irace`. It can be obtained by doing:
+   
+        $ R
+        > library(irace)
+        > system.file(package="irace")
+   
 
 3. For each template in your tuning directory, remove the `.tmpl`
    suffix, and modify them following the instructions in each file. In
@@ -117,6 +125,7 @@ Usage
    performs one run of Iterated Race. See the output of `irace --help`
    for additional configuration parameters. Command-line parameters
    override the configuration specified in the tune-conf file.
+
 
 Many tunings in parallel
 ------------------------
