* NEWS: New item.
git-svn-id: file:///home/manu/work/irace/svn/trunk@609 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+ * irace.cmdline ("--help") does not try to quit R anymore.
+
 1.01
 
  * Fix bug caused by file.exists (and possibly other functions)
