* TODO: New item.
git-svn-id: file:///home/manu/work/irace/svn/trunk@610 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -9,6 +9,8 @@ TODO R package:
 
 TODO General:
 
+ * How to avoid that MPI creates so many log files?
+
  * irace.Rdata should keep a list with the all the eliteCandidates after each
    race. Right now we only keep the best one.
 
