* TODO: Mention cluster /tmp issues.
git-svn-id: file:///home/manu/work/irace/svn/trunk@618 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -9,6 +9,9 @@ TODO R package:
 
 TODO General:
 
+ * Make tune-main, tune-main-cluster, tune-main-mpi and other scripts
+   use /tmp as much as possible.
+
  * How to avoid that MPI creates so many log files?
 
  * irace.Rdata should keep a list with the all the eliteCandidates after each
