* NEWS: New items.
git-svn-id: file:///home/manu/work/irace/svn/trunk@621 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+ * Faster computation of similar candidates (Jeremie Dubois-Lacoste
+   and Leslie Perez).
+
+ * Fix bug when saving instances in tunerResults$experiments.
+
  * irace.cmdline ("--help") does not try to quit R anymore.
 
 1.01
