* NEWS: Mention removal of expDescription.
git-svn-id: file:///home/manu/work/irace/svn/trunk@639 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+ * expDescription parameter was removed.
+
  * Faster computation of similar candidates (Jeremie Dubois-Lacoste
    and Leslie Perez).
 
