* The default execDir is the current directory.
git-svn-id: file:///home/manu/work/irace/svn/trunk@643 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/doc/old-documentation.tex
+++ b/doc/old-documentation.tex
@@ -997,7 +997,7 @@ F.R.S.-FNRS, of which they are Research Associates.
  In the latter case, the path is relative to the working directory.
 
 
-\defparameter{execDir}{exec-dir}{./TUNE}
+\defparameter{execDir}{exec-dir}{./}
  This specifies the directory where the program to be tuned is run.
 
 \defparameter{instanceDir}{instance-dir}{./Instances}
