--- a/README
+++ b/README
@@ -113,10 +113,10 @@ Usage
 4. Put the instances in `~/tuning/Instances/`. In addition, you can
    create a file that specifies which instances from that directory
    should be run and which instance-specific parameters to use. See
-   tune-conf.tmpl and instances-list.tmpl for examples. The command
+   `tune-conf.tmpl` and `instances-list.tmpl` for examples. The command
    irace will not attempt to create the execution directory (execDir),
-   so it must exist before calling irace. The default execDir is
-   `~/tuning/TUNE/`.
+   so it must exist before calling irace. The default execDir is the
+   current directory.
 
 5. Calling the command:
 
