* instanceDir is relative to working directory.
git-svn-id: file:///home/manu/work/irace/svn/trunk@644 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/doc/old-documentation.tex
+++ b/doc/old-documentation.tex
@@ -1002,7 +1002,7 @@ F.R.S.-FNRS, of which they are Research Associates.
 
 \defparameter{instanceDir}{instance-dir}{./Instances}
  This specifies the directory where tuning instances are located, either 
- absolute or relative to \parameter{execDir}.
+ absolute or relative to working directory.
 
 \defparameter{instanceFile}{instance-file}{""}
  A file containing a list of instances and (optionally) additional 
